--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2339,6 +2339,9 @@
     <ClCompile Include="Codeforces\700\730\731A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1100\1110\1114A.cpp">
+      <Filter>Codeforces\1100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
