--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2342,6 +2342,9 @@
     <ClCompile Include="Codeforces\1100\1110\1114A.cpp">
       <Filter>Codeforces\1100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\300\380\381A.cpp">
+      <Filter>Codeforces\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
