--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2357,6 +2357,9 @@
     <ClCompile Include="UVa\100\123.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\884.cpp">
+      <Filter>UVa\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
