--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2360,6 +2360,9 @@
     <ClCompile Include="UVa\800\884.cpp">
       <Filter>UVa\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\530.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
