--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2363,6 +2363,9 @@
     <ClCompile Include="UVa\500\530.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\600\630\630A.cpp">
+      <Filter>Codeforces\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
