--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2369,6 +2369,9 @@
     <ClCompile Include="UVa\10400\10407.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11321.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
