--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2375,6 +2375,9 @@
     <ClCompile Include="UVa\11500\11504.cpp">
       <Filter>UVa\11500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11463.cpp">
+      <Filter>UVa\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
