--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2381,6 +2381,9 @@
     <ClCompile Include="UVa\11500\11517.cpp">
       <Filter>UVa\11500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10200.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
