--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2390,6 +2390,9 @@
     <ClCompile Include="UVa\10200\10276.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10267.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
