Added topoSort(). Checked with 10305.

--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -1132,6 +1132,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10305.cpp" />
     <ClCompile Include="UVa\10300\10310.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -2891,6 +2892,7 @@
     <ClInclude Include="Library\segment.h" />
     <ClInclude Include="Library\shortest_path.h" />
     <ClInclude Include="Library\spanning_tree.h" />
+    <ClInclude Include="Library\topo_sort.h" />
     <ClInclude Include="Library\triangle.h" />
     <ClInclude Include="Library\union_find.h" />
     <ClInclude Include="Library\utils.h" />
