--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2399,6 +2399,9 @@
     <ClCompile Include="UVa\10300\10305.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\900\948.cpp">
+      <Filter>UVa\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
