--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2408,6 +2408,9 @@
     <ClCompile Include="UVa\10100\10105.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11466.cpp">
+      <Filter>UVa\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
