--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2411,6 +2411,9 @@
     <ClCompile Include="UVa\11400\11466.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11200\11242.cpp">
+      <Filter>UVa\11200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
