--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2414,6 +2414,9 @@
     <ClCompile Include="UVa\11200\11242.cpp">
       <Filter>UVa\11200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12500\12532.cpp">
+      <Filter>UVa\12500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -2444,9 +2447,6 @@
       <Filter>Library\old</Filter>
     </ClInclude>
     <ClInclude Include="Library\old\primes.h">
-      <Filter>Library\old</Filter>
-    </ClInclude>
-    <ClInclude Include="Library\old\segment_tree.h">
       <Filter>Library\old</Filter>
     </ClInclude>
     <ClInclude Include="Library\old\shortest_path.h">
@@ -2547,6 +2547,9 @@
     </ClInclude>
     <ClInclude Include="Library\topo_sort.h">
       <Filter>Library\Graph Theory</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\segment_tree.h">
+      <Filter>Library\Data Structure and Algorithms</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
