--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2356,6 +2356,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\200\247.cpp" />
     <ClCompile Include="UVa\200\256.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -2904,7 +2905,6 @@
     <ClInclude Include="Library\old\bases.h" />
     <ClInclude Include="Library\old\binary_search.h" />
     <ClInclude Include="Library\old\circle.h" />
-    <ClInclude Include="Library\old\components.h" />
     <ClInclude Include="Library\old\eularian.h" />
     <ClInclude Include="Library\old\graham.h" />
     <ClInclude Include="Library\old\graph_util.h" />
