--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2426,6 +2426,9 @@
     <ClCompile Include="UVa\800\825.cpp">
       <Filter>UVa\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10223.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
