--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2429,6 +2429,9 @@
     <ClCompile Include="UVa\10200\10223.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10651.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
