--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2432,6 +2432,9 @@
     <ClCompile Include="UVa\10600\10651.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11687.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
