--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2435,6 +2435,9 @@
     <ClCompile Include="UVa\11600\11687.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\119.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
