--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2441,6 +2441,9 @@
     <ClCompile Include="UVa\1200\1230.cpp">
       <Filter>UVa\1200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\615.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
