--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2444,6 +2444,9 @@
     <ClCompile Include="UVa\600\615.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10297.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
