--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2453,6 +2453,9 @@
     <ClCompile Include="UVa\10000\10007.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11683.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
