--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2456,6 +2456,9 @@
     <ClCompile Include="UVa\11600\11683.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11956.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
