--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2468,6 +2468,9 @@
     <ClCompile Include="UVa\500\574.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\311.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
