--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2471,6 +2471,9 @@
     <ClCompile Include="UVa\300\311.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12000\12086.cpp">
+      <Filter>UVa\12000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
