--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2477,6 +2477,9 @@
     <ClCompile Include="UVa\100\102.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\101.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
