--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2489,6 +2489,12 @@
     <ClCompile Include="UVa\100\103.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\341.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10300\10391.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
