--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2498,6 +2498,9 @@
     <ClCompile Include="UVa\1100\1112.cpp">
       <Filter>UVa\1100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10363.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
