--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2504,6 +2504,9 @@
     <ClCompile Include="UVa\11000\11039.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11917.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
