--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2507,6 +2507,9 @@
     <ClCompile Include="UVa\11900\11917.cpp">
       <Filter>UVa\11900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10622.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
