--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2510,6 +2510,9 @@
     <ClCompile Include="UVa\10600\10622.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11080.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
