--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2513,6 +2513,9 @@
     <ClCompile Include="UVa\11000\11080.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10004.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
