--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2516,6 +2516,9 @@
     <ClCompile Include="UVa\10000\10004.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\166.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
