--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2519,6 +2519,9 @@
     <ClCompile Include="UVa\100\166.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10892.cpp">
+      <Filter>UVa\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
